# cpp_source_template

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  setup.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
apps/example/: CMakeLists.txt
include/example/: example.hpp
libs/example/: CMakeLists.txt
libs/example/include/example/: example.h
libs/example/src/: example.cpp  example_p.h
libs/example/test/: CMakeLists.txt  test-example.cmake  test_example.cpp
src/example/: CMakeLists.txt  example.cpp  example_p.hpp
test/: CMakeLists.txt
test/example/: test_example.cpp
tools/cmake/: cpp.cmake  get_cpm.cmake  test.cmake
tools/docker/: Dockerfile
